4.1.5: 2023-02-03
* Fix the broken input configuration menu

4.1.4: 2023-08-27
* Update SDL
* Fix Windows crash

4.1.3: 2023-08-26
* Update Nintendo Switch version to latest devkitPro
* macOs Apple Silicon and Intel version
* compiles for ARM Linux

4.1.2: 2019-07-28
* Memory errors caused by bug in the welcome screen for each level in Ken 1.x has now been fixed
* Double buffering used everywhere to fix display errors with NVidia cards on Windows
* Switch: 9.0.0 firmware compatibility

4.1.1: 2019-07-21
* Instacrash on the Nintendo Switch fixed

4.1.0: 2019-07-14
* Port for macOS created

4.0.1: 2019-07-13
* Add CMake build system
* Limit sound channels to 2 to avoid super fast sound and music

4.0.0: 2019-06-16
* Brand new game launcher menu allowing you to launch any version of the game
* Ken's Labyrinth 1.0/1.1 graphical bug fixes
* Stereoscopic 3D added as an option in setup menu

3.2.3: 2019-04-06
* Ken's Labyrinth 1.0/1.1 now fully supports game controllers/Joycons -- no longer requiring a keyboard

3.2.2: 2019-04-02
* USB keyboard and mouse support for Nintendo Switch

3.2.1: 2019-03-03
* Anisotropic filtering now supported on Switch

3.2.0: 2019-12-18
* New audio device selectable in the setup menu: Adlib random instruments. This will play
  the music tracks with randomly selected instruments. If you don't like the instrument settings
  you can select it again and it will load a different random set.
* Changing audio settings now no longer requires you to quit the game. All changes are immediate
* Switch - Now dynamically switches to 1080p from 720p when connecting to the dock and vice versa. 
           The setup menu will also reflect the current mode.

3.1.2: 2019-02-08
 * Upgraded the Adlib emulator to Ken's 64 bit compatible one resolving all music issues
   such as silent or distorted instruments on some platforms

3.1.1: 2019-01-27
  NOTE: If updating from 3.0.0 you will need to delete Ken2.nro because the new
  executable has a different name.
